--- a/src/functions/index.scss
+++ b/src/functions/index.scss
@@ -17,5 +17,18 @@
     @return $ceiled;
 }
 
+/*
+ * A basic function to search for a pattern inside a string and replace its content
+ */
+@function str_replace($string, $search, $replace: '') {
+    $index: str-index($string, $search);
+  
+    @if $index {
+      @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+    }
+  
+    @return $string;
+  }
+
 // Imports
 @import "color";
