Refactored coloring to a modular state

--- a/src/components/backgrounds/taints.scss
+++ b/src/components/backgrounds/taints.scss
@@ -1,67 +1,42 @@
 .#{$_background_name} {
+
     /*
-     * Solid main colors
+     * Taints main colors
      */
 
-    &.#{$_taint_name}-#{$_primary_name} {
-        @include taint_before("primary_color");
-    }
-
-    &.#{$_taint_name}-#{$_secondary_name} {
-        @include taint_before("secondary_color");
-    }
-
-    &.#{$_taint_name}-#{$_success_name} {
-        @include taint_before("success_color");
-    }
-
-    &.#{$_taint_name}-#{$_warning_name} {
-        @include taint_before("warning_color");
-    }
-
-    &.#{$_taint_name}-#{$_danger_name} {
-        @include taint_before("danger_color");
-    }
-
-    &.#{$_taint_name}-#{$_light_name} {
-        @include taint_before("light_color");
-    }
-
-    &.#{$_taint_name}-#{$_dark_name} {
-        @include taint_before("dark_color", 0.9);
+    @include loop_colors ($__official_colors) using ($color) {
+        &-#{$_taint_name}-#{str_replace(nth($color, 1), "_color", "")} {
+            @include taint_before(nth($color, 1));
+        }
     }
 
     /*
-    * Gradient main colors
-    */
+     * Taints gradient colors
+     */
 
-    $gradient_opacity: 0.9;
-
-    &.#{$_taint_name}-#{$_primary_name}-#{$_gradient_name} {
-        @include taint_before("primary_gradient_color", $gradient_opacity);
+    @include loop_colors ($__official_gradient_colors) using ($color) {
+        &-#{$_taint_name}-#{str_replace(nth($color, 1), "_color", "")} {
+            @include taint_before(nth($color, 1));
+        }
     }
 
-    &.#{$_taint_name}-#{$_secondary_name}-#{$_gradient_name} {
-        @include taint_before("secondary_gradient_color", $gradient_opacity);
+    /*
+     * Background main colors
+     */
+
+    @include loop_colors ($__official_colors) using ($color) {
+        &-#{str_replace(nth($color, 1), "_color", "")} {
+            @include taint_background(nth($color, 1));
+        }
     }
 
-    &.#{$_taint_name}-#{$_success_name}-#{$_gradient_name} {
-        @include taint_before("success_gradient_color", $gradient_opacity);
-    }
+    /*
+     * Background gradient colors
+     */
 
-    &.#{$_taint_name}-#{$_warning_name}-#{$_gradient_name} {
-        @include taint_before("warning_gradient_color", $gradient_opacity);
-    }
-
-    &.#{$_taint_name}-#{$_danger_name}-#{$_gradient_name} {
-        @include taint_before("danger_gradient_color", $gradient_opacity);
-    }
-
-    &.#{$_taint_name}-#{$_light_name}-#{$_gradient_name} {
-        @include taint_before("light_gradient_color", $gradient_opacity);
-    }
-
-    &.#{$_taint_name}-#{$_dark_name}-#{$_gradient_name} {
-        @include taint_before("dark_gradient_color", $gradient_opacity);
+    @include loop_colors ($__official_gradient_colors) using ($color) {
+        &-#{str_replace(nth($color, 1), "_color", "")} {
+            @include taint_background(nth($color, 1));
+        }
     }
 }
