--- a/src/mixins/color.scss
+++ b/src/mixins/color.scss
@@ -1,4 +1,11 @@
-@mixin taint_before ($color, $opacity: 0.5) {
+@mixin loop_colors ($colors) {
+    // Loop through colors
+    @each $color in $colors {
+        @content ($color);
+    }
+}
+
+@mixin taint_before ($color, $hoverable: false, $opacity: 0.5) {
     &:before {
         //variable
         background: get_var($color);
@@ -15,14 +22,16 @@
     }
         
     //Hover
-    &:hover:not([disabled]) {
-        background: lighten_color($color, 20%);
-        box-shadow: 0px 0px 3px 1px get_var(str_replace($color,"_gradient",""));
-    }
-
-    //Active
-    &:active:not([disabled]) {
-        box-shadow: none;
+    @if ($hoverable == true) {
+        &:hover:not([disabled]) {
+            background: lighten_color($color, 20%);
+            box-shadow: 0px 0px 3px 1px get_var(str_replace($color,"_gradient",""));
+        }
+    
+        //Active
+        &:active:not([disabled]) {
+            box-shadow: none;
+        }
     }
 }
 
